<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_projects">Projetos</string>
    <string name="host">Host</string>
    <string name="title_activity_issues">Atividades</string>

</resources>