<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EAF0F2"
    android:orientation="vertical" >

    <!-- android:background="#3DC2F7" -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:id="@+id/linearLayout0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvHost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/host" />

            <EditText
                android:id="@+id/etHost"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:background="@drawable/dg_white_blue"
                android:inputType="textPersonName"
                android:text="http://10.0.2.2:3000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout0"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/username" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:background="@drawable/dg_white_blue"
                android:inputType="textPersonName"
                android:text="admin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:background="@drawable/dg_white_blue"
                android:inputType="textPassword"
                android:text="admin"
                android:textColor="#454545" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:layout_gravity="right"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/confirm"
                android:textColor="#454545"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/cancel"
                android:textColor="#454545"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>